--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "name": "secret-board",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "pug": "2.0.4"
+  }
 }
