--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "cookies": "0.5.1",
     "http-auth": "3.2.3",
     "pg": "7.17.1",
     "pg-hstore": "2.3.3",
